[tool.poetry]
name = "kosmorrolib"
version = "1.0.8"
authors = ["Jérôme Deuchnord <jerome@deuchnord.fr>"]
homepage = "https://kosmorro.space/lib"
repository = "https://github.com/Kosmorro/lib"
documentation = "https://kosmorro.space/lib/doc"
keywords = ["kosmorro", "astronomy", "ephemerides", "ephemeris"]
license = "AGPL-3.0-or-later"
description = "A library to computes the ephemerides."
readme = "README.md"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
skyfield = "^1.21"
skyfield-data = ">=3,<6"
python-dateutil = "^2.8"

[tool.poetry.group.dev.dependencies]
black = "^23.1"
parameterized = "^0.9.0"
coverage = "^6.1.2"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
